# langgraph-research-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  export_traces.py  langgraph.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/: config.py
app/graph/: builder.py  research.py  writer.py
app/models/: classes.py
app/nodes/: evaluate_sources.py  outline.py  question_generator.py  search_sources.py
app/nodes/outline/: condense_topic.py  interrupt.py  outline.py  parse_review.py
app/nodes/research/: evaluate_sources.py  identify_gaps.py  question_generator.py  search_sources.py
app/nodes/writer/: check_writer_complete.py  edit_report.py  write_report.py
app/state/: graph_state.py  run_state.py
db/: init.sql
tests/integration/: conftest.py  test_full_graph.py
tests/unit/nodes/outline/: test_parse_review.py
tests/unit/nodes/research/: test_evaluate_sources.py  test_identify_gaps.py
tests/unit/nodes/writer/: test_check_writer_complete.py
ui/: App.jsx  Dockerfile  api.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
ui/components/: OutputDisplay.jsx  StreamingDisplay.jsx  UserInput.jsx  VariableDisplay.jsx
