[project]
name = "langgraph-research-assistant"
version = "0.1.0"
dependencies = [
  "langgraph",
  "langgraph-cli[inmem]",
  "langgraph-checkpoint-postgres",
  "langchain",
  "langchain-openai",
  "langchain-tavily",
  "openai",
  "python-dotenv"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"